--- a/front.html
+++ b/front.html
@@ -4,70 +4,155 @@
   <meta charset="UTF-8">
   <title>Administração de Usuários</title>
   <style>
+    :root {
+      --primary-color: #ce0058;
+      --background-color: #ffffff;
+      --text-color: #333;
+      --border-color: #ddd;
+    }
+
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
     body {
       font-family: Arial, sans-serif;
-      margin: 30px;
-      background-color: #f5f5f5;
+      background-color: var(--background-color);
+      color: var(--text-color);
+      padding: 20px;
+      display: flex;
+      justify-content: center;
     }
-    h1 {
+
+    .container {
+      width: 100%;
+      max-width: 960px;
+    }
+
+    h1, h2 {
       text-align: center;
+      color: var(--primary-color);
     }
+
     table {
       width: 100%;
       border-collapse: collapse;
       margin-top: 20px;
-      background-color: white;
+      background-color: #fff;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
     }
+
     th, td {
-      border: 1px solid #ccc;
+      border: 1px solid var(--border-color);
       padding: 10px;
       text-align: left;
     }
+
     th {
-      background-color: #eee;
+      background-color: var(--primary-color);
+      color: #fff;
     }
+
     button {
       padding: 6px 12px;
       margin: 2px;
       cursor: pointer;
+      background-color: var(--primary-color);
+      color: white;
+      border: none;
+      border-radius: 4px;
     }
+
+    button:hover {
+      opacity: 0.9;
+    }
+
     form {
       margin-top: 20px;
-      background-color: white;
+      background-color: #fff;
       padding: 15px;
-      border: 1px solid #ccc;
+      border: 1px solid var(--border-color);
+      border-radius: 6px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.03);
     }
+
     label {
-      margin-right: 10px;
+      display: block;
+      margin: 10px 0;
+      font-weight: bold;
+    }
+
+    input[type="text"],
+    input[type="email"],
+    input[type="number"] {
+      width: 100%;
+      padding: 8px;
+      margin-top: 5px;
+      border: 1px solid var(--border-color);
+      border-radius: 4px;
+    }
+
+    @media (max-width: 600px) {
+      table, thead, tbody, th, td, tr {
+        display: block;
+      }
+
+      thead tr {
+        display: none;
+      }
+
+      td {
+        position: relative;
+        padding-left: 50%;
+        text-align: right;
+      }
+
+      td::before {
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        width: 45%;
+        white-space: nowrap;
+        font-weight: bold;
+        text-align: left;
+      }
+
+      td:nth-of-type(1)::before { content: "Nome"; }
+      td:nth-of-type(2)::before { content: "Email"; }
+      td:nth-of-type(3)::before { content: "Pontuação"; }
+      td:nth-of-type(4)::before { content: "Ações"; }
     }
   </style>
 </head>
 <body>
+  <div class="container">
+    <h1>Gerenciador de Usuários</h1>
 
-  <h1>Gerenciador de Usuários</h1>
+    <table id="userTable">
+      <thead>
+        <tr>
+          <th>Nome</th>
+          <th>Email</th>
+          <th>Pontuação</th>
+          <th>Ações</th>
+        </tr>
+      </thead>
+      <tbody>
+        <!-- Dados vão aqui -->
+      </tbody>
+    </table>
 
-  <table id="userTable">
-    <thead>
-      <tr>
-        <th>Nome</th>
-        <th>Email</th>
-        <th>Pontuação</th>
-        <th>Ações</th>
-      </tr>
-    </thead>
-    <tbody>
-      <!-- Dados vão aqui -->
-    </tbody>
-  </table>
-
-  <form id="userForm">
-    <h2>Cadastrar / Editar Usuário</h2>
-    <input type="hidden" id="editIndex" value="">
-    <label>Nome: <input type="text" id="name" required></label>
-    <label>Email: <input type="email" id="email" required></label>
-    <label>Pontuação: <input type="number" id="score" required></label>
-    <button type="submit">Salvar</button>
-  </form>
+    <form id="userForm">
+      <h2>Cadastrar / Editar Usuário</h2>
+      <input type="hidden" id="editIndex" value="">
+      <label>Nome: <input type="text" id="name" required></label>
+      <label>Email: <input type="email" id="email" required></label>
+      <label>Pontuação: <input type="number" id="score" required></label>
+      <button type="submit">Salvar</button>
+    </form>
+  </div>
 
   <script>
     let users = [];
@@ -112,7 +197,7 @@
     async function deleteUser(index) {
       const user = users[index];
       try {
-        await fetch(`${API_URL}/user/${user._id}`, {
+        await fetch(`${API_URL}/users/${user._id}`, {
           method: 'DELETE'
         });
         users.splice(index, 1);
@@ -130,9 +215,8 @@
       const index = document.getElementById("editIndex").value;
 
       if (index === "") {
-        // Novo usuário
         try {
-          const res = await fetch(`${API_URL}/user`, {
+          const res = await fetch(`${API_URL}/users`, {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify({ name, email, score })
@@ -143,10 +227,9 @@
           console.error("Erro ao adicionar usuário:", err);
         }
       } else {
-        // Atualizar usuário existente
         try {
           const user = users[index];
-          const res = await fetch(`${API_URL}/user`, {
+          const res = await fetch(`${API_URL}/users/${user._id}`, {
             method: 'PUT',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify({ name, email, score })
